LOCAL Added error handling and workers collection,
